<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textNombre"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textClient"
            android:textSize="16sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textService"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textColorHint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtService"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/edtService"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:maxLength="50"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <RatingBar
            android:id="@+id/ratingbarbody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            style="@style/MyRatingBar"  />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/textRating"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        app:counterEnabled="true"
        app:counterMaxLength="1000"
        android:textColorHint="@color/colorPrimaryDark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/edtDescription"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:minLines="4"
            android:gravity="top|start"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/btnUploadPhoto"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtOptional"
            android:textSize="16sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgFotoBody"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_banner_foreground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <Button
            android:id="@+id/btnPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/btnPublish"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:backgroundTint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:text="@string/btnCancel"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>





</LinearLayout>