<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar_back"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/imglogo"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPersonName"
                android:hint="@string/edtNames"
                android:textSize="18sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textSurnames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textNames"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSurnames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textPersonName"
                android:hint="@string/edtSurnames"
                android:textSize="18sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSurnames"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimary">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:hint="@string/edtEmail"
                android:textSize="18sp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPass"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/textEmail"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            app:passwordToggleTint="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edtPass"
                android:textSize="18sp"
                android:maxLength="10"
                android:ems="10"
                android:inputType = "textPassword"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_below="@+id/textPass"
            android:background="@color/colorPrimary"
            android:text="@string/btnRegister"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</LinearLayout>