<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/colorWhite"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/imgComentario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/huanchaco"
                android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/parentRelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textService"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_alignParentStart="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/textService"/>

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentEnd="true"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/textDate"/>

            </RelativeLayout>

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                style="@style/MyRatingBar"/>

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/textDesciption"/>

            <TextView
                android:id="@+id/textClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/textClient"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    </LinearLayout>
