<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/imglogo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textCorreo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@+id/imgLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/edtEmail"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:maxLength="50"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:layout_below="@+id/textCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:textSize="18sp"
            android:maxLength="10"
            android:hint="@string/edtPass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimaryDark"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="40dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:layout_marginEnd="40dp"
        android:textSize="18sp"
        android:text="@string/btnSignIn"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/textPass"/>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btnSignIn"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/btnRegister"/>
    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:indeterminateTintMode="src_in"
        android:visibility="invisible"
        android:layout_below="@+id/textRegister"/>

</RelativeLayout>